fixes dark mode hover

--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -478,7 +478,7 @@
   --cui-toast-header-color: var(--cui-color-black);
   --cui-card-cap-color: var(--cyberdrain-white);
   --cui-card-cap-bg: var(--cui-color-dark);
-
+  --cui-tertiary-bg: var(--cui-bgcolor-table-header);
   // CIPP Impact theme variables.
   --cipp-fa-inverse-color: var(--cyberdrain-dark);
   --cipp-search-bg: var(--cyberdrain-dark);
